<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@color/white"
        app:cardCornerRadius="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/filter_komputer"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_computerfilter_searchbar"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="4dp"
                android:hint="@string/pencarian_dot"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:minLines="1"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/quicksand"
                android:text="@string/cabang"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_computerfilter_searchbar" />

            <TextView
                android:id="@+id/textView23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/quicksand"
                android:text="@string/lokasi_"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/textView8"
                app:layout_constraintTop_toBottomOf="@+id/textView22" />

            <TextView
                android:id="@+id/textView25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/quicksand"
                android:text="@string/divisi"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/textView8"
                app:layout_constraintTop_toBottomOf="@+id/textView23" />

            <Spinner
                android:id="@+id/sp_filter_computer_branch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/textView22"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView22"
                app:layout_constraintTop_toTopOf="@+id/textView22" />

            <Spinner
                android:id="@+id/sp_filter_computer_lokasi"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/textView23"
                app:layout_constraintEnd_toEndOf="@+id/sp_filter_computer_branch"
                app:layout_constraintStart_toEndOf="@+id/textView23"
                app:layout_constraintStart_toStartOf="@+id/sp_filter_computer_branch"
                app:layout_constraintTop_toTopOf="@+id/textView23" />

            <Spinner
                android:id="@+id/sp_filter_computer_divisi"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/textView25"
                app:layout_constraintEnd_toEndOf="@+id/sp_filter_computer_branch"
                app:layout_constraintStart_toStartOf="@+id/sp_filter_computer_branch"
                app:layout_constraintTop_toTopOf="@+id/textView25" />

            <Button
                android:id="@+id/bt_filter_computer_apply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:text="@string/terapkan"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView30" />

            <TextView
                android:id="@+id/textView27"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/quicksand"
                android:text="@string/seat"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/textView8"
                app:layout_constraintTop_toBottomOf="@+id/textView25" />

            <TextView
                android:id="@+id/textView30"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/quicksand"
                android:text="@string/status"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/textView8"
                app:layout_constraintTop_toBottomOf="@+id/textView27" />

            <Spinner
                android:id="@+id/sp_filter_computer_seat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/textView27"
                app:layout_constraintEnd_toEndOf="@+id/sp_filter_computer_divisi"
                app:layout_constraintStart_toEndOf="@+id/textView27"
                app:layout_constraintStart_toStartOf="@+id/sp_filter_computer_divisi"
                app:layout_constraintTop_toTopOf="@+id/textView27" />

            <Spinner
                android:id="@+id/sp_filter_computer_status"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/textView30"
                app:layout_constraintEnd_toEndOf="@+id/sp_filter_computer_seat"
                app:layout_constraintStart_toStartOf="@+id/sp_filter_computer_seat"
                app:layout_constraintTop_toTopOf="@+id/textView30" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>