<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linear_layout_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/inv_komputer"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_computerlist_filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/filter" />

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/search_bar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:clipToPadding="false"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="4dp"
            app:cardElevation="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linear_layout_container">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <androidx.appcompat.widget.SearchView
                    android:id="@+id/et_computerlist_searchbar"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:imeOptions="actionSearch"
                    android:maxLines="1"
                    android:singleLine="true"
                    app:iconifiedByDefault="false"
                    app:queryBackground="@android:color/transparent"
                    app:queryHint="Cari Komputer">

                </androidx.appcompat.widget.SearchView>


            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_computerlist"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:clipToPadding="false"
            android:layoutAnimation="@anim/layout_animation_fall_down"
            android:paddingTop="24dp"
            app:layout_constraintBottom_toTopOf="@+id/bt_computerlist_tambah"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search_bar" />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bt_computerlist_tambah"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/tambah_komputer"
            android:fontFamily="@font/roboto" />

        <TextView
            android:text="@string/jumlah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_computerlist_unit"
            app:layout_constraintTop_toTopOf="@+id/bt_computerlist_tambah"
            app:layout_constraintBottom_toBottomOf="@+id/bt_computerlist_tambah"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/roboto" />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/pb_computerlist"
            android:visibility="gone" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>